Refactor, separate client and main source sets, listen and persist operations to world state

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,14 @@ repositories {
 }
 
 loom {
+	splitEnvironmentSourceSets()
+
+	mods {
+		"${project.archives_base_name}" {
+			sourceSet sourceSets.main
+			sourceSet sourceSets.client
+		}
+	}
 }
 
 dependencies {
