--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,6 @@ archives_base_name=item-collection-tracker
 
 # Dependencies
 fabric_version=0.100.0+1.20.6
+cloth_config_version=14.0.126
+modmenu_version=10.0.0
 lombok_version=1.18.32
