--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modApi "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
-	modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
+//	modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 	compileOnly "org.projectlombok:lombok:${project.lombok_version}"
 	annotationProcessor "org.projectlombok:lombok:${project.lombok_version}"
